--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,15 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.navbar-mine {
+  background-color: #e9ecef;
+  padding: 20px;
+}
+
+.navbar-mine a {
+  text-decoration: none;
+  color: #868e96;
+  font-size: 20px;
+  transition: all 0.3s;
+}
