--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -10,7 +10,13 @@
   box-shadow: 0 32px 64px rgba(0, 0, 0, 0.06);
 }
 
-.card-content {
+.card-img {
+  width: 100%;
+  height: 18vw;
+  object-fit: cover;
+}
+
+#card-list-content {
   display: flex;
   padding: 10px;
   gap: 10px;
@@ -18,5 +24,25 @@
   justify-content: space-between;
 }
 
-#lists-movie-counter {
+/* Movies card */
+
+#card-movie-content {
+  padding: 10px;
+}
+
+#card-overview {
+  text-align: justify;
+  border-bottom: solid 1px #e9ecef;
+}
+
+#card-title-and-rating {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: solid 1px #e9ecef;
+}
+
+#card-comment {
+  display: flex;
+  gap: 10px;
 }
